2006-01-21  David Schleef  <ds@schleef.org>

	* configure.ac:
	* ext/swfdec/gstswfdec.c: Update from swfdec.

2006-01-21  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/qtdemux/qtdemux.c: (qtdemux_parse_trak),
	(qtdemux_audio_caps):
	  'twos' and 'sowt' fourcc can be 16bit or 8bit audio.
	  Fix 8bit case (#327133, based on patch by: Fabrizio
	  Gennari <fabrizio dot ge at tiscali dot it>).
	  Also, "G_LITTLE_ENDIAN" and "G_BIG_ENDIAN" are not
	  valid literals for endianness in caps strings,
	  only "LITTLE_ENDIAN" and "BIG_ENDIAN" are valid. 

2006-01-20  Edgard Lima <edgard.lima@indt.org.br>

	* ext/ivorbis/vorbisfile.c:
	* ext/neon/gstneonhttpsrc.c:
	Fixed state transictions PLAYING->NULL->PLAYING.
	
2006-01-19  Edgard Lima <edgard.lima@indt.org.br>

	* ext/tremor/vorbisfile.c:
	Some minor improvements on log messages.

2006-01-18  Edgard Lima <edgard.lima@indt.org.br>

	* gst/qtdemux/qtdemux.c: qtdemux_parse_trak:
	Ronald's patch applied. see bug #326318.

2006-01-17  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_init),
	(gst_qtdemux_send_event), (gst_qtdemux_handle_src_event),
	(gst_qtdemux_change_state), (gst_qtdemux_loop_header):
	* gst/qtdemux/qtdemux.h:
	  Fix seeking for quicktime files. Could still use some more
	  love and sophistication.

2006-01-16  Edgard Lima <edgard.lima@indt.org.br>

	* ext/libmms/gstmms.c: gst_mms_init:
	* ext/neon/gstneonhttpsrc.c: gst_neonhttp_src_init:
	* ext/sdl/sdlaudiosink.c: gst_sdlaudio_sink_dispose:
	Removed gst_base_src_set_live from mms and neon, and now calling
	parent_class->dispose in dispose on sdlaudio.
	
2006-01-11  Edgard Lima <edgard.lima@indt.org.br>

	* ext/sdl/sdlvideosink.c:
	Now implementing navigation interface and using
	GST_BOILER_PLATE_FULL.
	
2006-01-11  Christian Schaller  <christian@fluendo.com>

	Remove SunAudio plugin as Brian's new one is in -good

	* sys/Makefile.am:
	* sys/sunaudio/Makefile.am:
	* sys/sunaudio/gstsunaudio.c: